--- a/css/main.css
+++ b/css/main.css
@@ -1938,7 +1938,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff74c4;
+  background: #3425fc;
 }
 .links-of-blogroll {
   font-size: 13px;
